# tap-postgres

./: README.md  pyproject.toml  setup.py
.github/workflows/: veracode-static-scan.yml
tap_postgres/: __init__.py  db.py
tap_postgres/sync_strategies/: logical_replication.py
